# test-pre-hooks

./: .pre-commit-config.yaml  main.py  pyproject.toml
